<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.edlogiq.neurongym.neurongym.SignInActivity">

    <!-- <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"

         android:background="@color/hadding_bar"
   android:visibility="visible"
         android:id="@+id/linearLayout1">
   -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Signin"
        android:background="@color/hadding_bar"
        android:layout_gravity="center"
        android:gravity="center"
        android:elevation="4dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="35dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_below="@+id/textView1"
        android:gravity="fill_horizontal|center_horizontal"
        android:paddingTop="20dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/linearLayout1"
            android:background="@drawable/facebook"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:elevation="4dp"
            android:id="@+id/linearLayout2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/LoginWithfacebook"
                android:layout_gravity="center_vertical"
                android:paddingLeft="100dp"
                android:textColor="@color/login_text"
                android:id="@+id/textView2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/twitter"
            android:clickable="true"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout3"
            android:elevation="4dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/LoginWithtwitter"
                android:layout_gravity="center_vertical"
                android:paddingLeft="100dp"
                android:textColor="@color/login_text"
                android:id="@+id/textView3" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:background="@drawable/googleplus"
            android:layout_below="@+id/linearLayout3"
            android:id="@+id/linearLayout4"
            android:elevation="4dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/LoginWithGoogleplus"
                android:layout_gravity="center_vertical"
                android:paddingLeft="100dp"
                android:textColor="@color/login_text"
                android:id="@+id/textView4" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/linkedin"
            android:layout_below="@+id/linearLayout4"
            android:id="@+id/linearLayout5"
            android:clickable="true"
            android:elevation="4dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/LoginWithLinkedIn"
                android:layout_gravity="center_vertical"
                android:paddingLeft="100dp"
                android:textColor="@color/login_text"
                android:id="@+id/textView5" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AlreadyHaveAccount"
            android:textColor="@color/text_color"
            android:paddingTop="10dp"
            android:id="@+id/textView6"

            android:focusableInTouchMode="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TermsnConditions"
            android:textColor="@color/text_color"
            android:layout_below="@+id/textView6"
            android:id="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PrivacyPolicy"
            android:textColor="@color/text_color"
            android:layout_below="@+id/textView7"
            android:id="@+id/textView8" />

    </LinearLayout>
    <!--     </LinearLayout>-->




</RelativeLayout>
